<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fadeScrollbars="false"
    android:layout_gravity="center_vertical">
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center">
	    <Button android:id="@+id/playButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	   		android:paddingTop="10dp"
	        android:text="@string/play"
	        style="@style/TextFont"/>
	    <Button android:id="@+id/rankButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/rank"
	        style="@style/TextFont"/>
	    <Button android:id="@+id/achievementsButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/achievements"
	        style="@style/TextFont" />
	    <Button android:id="@+id/settingsButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/settings"
	        style="@style/TextFont"/>
	    <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
	    <Button android:id="@+id/sign_out_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:background="@android:drawable/btn_default"
            android:text="@string/logout"
            android:visibility="gone" />
	</LinearLayout>
</ScrollView>