<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:id="@+id/buttonsBottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:visibility="gone">
	    <Button android:id="@+id/mainMenuButton"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:text="@string/main_menu"
	        android:layout_weight="1"
	        style="@style/ButtonNormal" />
	    <Button android:id="@+id/sendScoreButton"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:text="@string/send_score"
	        android:layout_weight="1"
	        style="@style/ButtonNormal" />
	</LinearLayout>
    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonsBottom"
        android:gravity="center">
        <TextView android:id="@+id/you_got"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/you_got"
	        style="@style/TextFont"/>
        <TextView android:id="@+id/scoreTV"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=""
	        style="@style/TextFont"/>
        <TextView android:id="@+id/points"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/points"
	        style="@style/TextFont"/>
    </LinearLayout>
</RelativeLayout>
