<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <Button android:id="@+id/leftButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="35dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:background="@android:drawable/btn_default"
            android:text="@string/day" />
        <Button android:id="@+id/rightButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="35dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:background="@android:drawable/btn_default"
            android:text="@string/insane" />
    </LinearLayout>
    <TextView android:id="@+id/rankTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/winners"
        style="@style/TextFont"
        android:background="@android:color/black" />
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <Button android:id="@+id/seeRankButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_rank"
            style="@style/ButtonNormal"/>
    </LinearLayout>
        
</LinearLayout>